--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.7.0",
+    "http-status-codes": "^2.2.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1",
