--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,36 +3,45 @@ version: '3.9'
 services:
   backend:
     build: ./backend
+    platform: linux/x86_64
+    restart: 'always'
+    command: sh
     container_name: 'app_backend'
     ports:
       - 3001:3001
     volumes:
       - ./backend:/app/back
-    healthcheck:
-      test: ["CMD", "lsof", "-t", "-i:3001"]
-      timeout: 10s
-      retries: 5
+    # healthcheck:
+    #   test: ["CMD", "lsof", "-t", "-i:3001"]
+    #   timeout: 10s
+    #   retries: 5
     depends_on:
-      dataDb:
-        condition: service_healthy
+      - 'dataDb'
+        # condition: service_healthy
+    tty: true
+    stdin_open: true
 
-  frontend:
-    build: ./frontend
-    container_name: 'app_frontend'
-    ports:
-      - 3000:3000
+  # frontend:
+  #   build: ./frontend
+  #   container_name: 'app_frontend'
+  #   ports:
+  #     - 3000:3000
 
-    command: npm start
+  #   command: npm start
 
   dataDb:
     image: mysql:8.0.21
     container_name: "mysql_db"
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
     ports:
-      - 3004:3306
+      - 3306:3306
     restart: 'always'
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 5
-    cap_add:
-      - SYS_NICE
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+    #   timeout: 10s
+    #   retries: 5
+    # cap_add:
+    #   - SYS_NICE
+
+    
