--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,8 @@
     "skipLibCheck": true,
     "paths": {
       "*": ["node_modules/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "src/custom_typings/express/index.d.ts"],
   },
   "include": ["src/**/*"],
   "exclude": ["src/tests"]
