--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,11 @@
 # Imagem de Origem
-FROM node:16.0.0
+# FROM node:16.0.0
 
-WORKDIR /app
+# WORKDIR /app
 
-ENV PATH /app/node_modules/.bin:$PATH
+# ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package.json /app/package.json
-RUN npm install --silent
-RUN npm install react-scripts@3.3.1 -g --silent
+# COPY package.json /app/package.json
+# RUN npm install --silent
 
-CMD ["npm", "start"]
+# CMD ["npm", "start"]
