--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "predev": "npm run build",
     "dev": "nodemon --files ./src/server.ts",
     "build": "tsc",
@@ -14,6 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -30,6 +31,7 @@
     "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/mysql": "^2.15.21",
@@ -38,9 +40,11 @@
     "@types/sinon": "^10.0.12",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "jest": "^28.1.2",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.18",
     "sinon": "^14.0.0",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   }
 }
