--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.test.ts'",
     "predev": "npm run build",
     "dev": "nodemon --files ./src/server.ts",
     "build": "tsc",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -37,6 +38,7 @@
     "@types/sequelize": "^4.28.13",
     "@types/sinon": "^10.0.12",
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.18",
